--- a/r_scripts/data_wrangling.Rmd
+++ b/r_scripts/data_wrangling.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Characterisation of drug-resistant Mycobacterium tuberculosis mutations and transmission in Pakistan"
 output: 
-  bookdown::html_document2: 
+  bookdown::word_document2: 
     fig_caption: yes
     table_caption: yes
     number_sections: no
@@ -30,6 +30,8 @@ library(gplots)
 library(RColorBrewer)
 library(randomcoloR)
 library(usedist)
+library(phytools)
+library(sp)
 knitr::opts_chunk$set(echo = F)
 # options(scipen=1, digits=2)
 options(scipen=999, digits = 3)
@@ -71,6 +73,227 @@ to_table <- function(x, pc_dir = "row"){
 log10_ceiling <- function(x) {
   10^(ceiling(log10(x)))
 }
+
+plot.phylo.to.map <- function (x, type = c("phylogram", "direct"), ...) 
+{
+  type <- type[1]
+  if (class(x) == "phylo.to.map") {
+    tree <- x$tree
+    map <- x$map
+    coords <- x$coords
+  }
+  else stop("x should be an object of class \"phylo.to.map\"")
+  if (hasArg(xlim)) 
+    xlim <- list(...)$xlim
+  else xlim <- map$range[1:2]
+  if (hasArg(ylim)) 
+    ylim <- list(...)$ylim
+  else ylim <- map$range[3:4]
+  if (hasArg(fsize)) 
+    fsize <- list(...)$fsize
+  else fsize <- 1
+  if (hasArg(split)) 
+    split <- list(...)$split
+  else split <- c(0.4, 0.6)
+  if (hasArg(psize)) 
+    psize <- list(...)$psize
+  else psize <- 1
+  if (hasArg(cex.points)) {
+    cex.points <- list(...)$cex.points
+    if (length(cex.points) == 1) 
+      cex.points <- c(0.6 * cex.points, cex.points)
+  }
+  else cex.points <- c(0.6 * psize, psize)
+  if (hasArg(mar)) 
+    mar <- list(...)$mar
+  else mar <- rep(0, 4)
+  if (hasArg(asp)) 
+    asp <- list(...)$asp
+  else asp <- 1
+  if (hasArg(ftype)) 
+    ftype <- list(...)$ftype
+  else ftype <- "reg"
+  ftype <- which(c("off", "reg", "b", "i", "bi") == ftype) - 
+    1
+  if (!ftype) 
+    fsize = 0
+  if (hasArg(from.tip)) 
+    from.tip <- list(...)$from.tip
+  else from.tip <- FALSE
+  if (hasArg(colors)) 
+    colors <- list(...)$colors
+  else colors <- "red"
+  if (length(colors) == 1) 
+    colors <- rep(colors[1], 2)
+  if (length(colors) == 2 && type == "phylogram") {
+    colors <- matrix(rep(colors, nrow(coords)), nrow(coords), 
+                     2, byrow = TRUE)
+    rownames(colors) <- rownames(coords)
+  }
+  if (hasArg(direction)) 
+    direction <- list(...)$direction
+  else direction <- "downwards"
+  if (hasArg(pch)) 
+    pch <- list(...)$pch
+  else pch <- 21
+  if (length(pch) == 1) 
+    pch <- rep(pch, 2)
+  if (hasArg(lwd)) 
+    lwd <- list(...)$lwd
+  else lwd <- c(2, 1)
+  if (length(lwd) == 1) 
+    lwd <- rep(lwd, 2)
+  if (hasArg(lty)) 
+    lty <- list(...)$lty
+  else lty <- "dashed"
+  if (hasArg(pts)) 
+    pts <- list(...)$pts
+  else pts <- TRUE
+  if (type == "phylogram") {
+    if (direction == "downwards") {
+      if (!ftype) 
+        ylim <- c(ylim[1], ylim[2] + 0.03 * diff(ylim))
+      ylim <- c(ylim[1], ylim[2] + split[1]/split[2] * 
+                  (ylim[2] - ylim[1]))
+    }
+    else if (direction == "rightwards") {
+      if (!ftype) 
+        xlim <- c(xlim[1] - 0.03 * diff(xlim), xlim[2])
+      xlim <- c(xlim[1] - split[1]/split[2] * (xlim[2] - 
+                                                 xlim[1]), xlim[2])
+    }
+  }
+  par(mar = mar)
+  plot.new()
+  plot.window(xlim = xlim, ylim = ylim, asp = asp)
+  map(map, add = TRUE, fill = TRUE, col = "black", border="grey", mar = rep(0, 
+                                                                            4))
+  if (type == "phylogram") {
+    cw <- reorder(tree, "cladewise")
+    n <- Ntip(cw)
+    if (direction == "downwards") {
+      dx <- abs(diff(xlim))
+      rect(xlim[1] - 1.04 * dx, ylim[2] - split[1] * (ylim[2] - 
+                                                        ylim[1]), xlim[2] + 1.04 * dx, ylim[2], col = "white", 
+           border = "white")
+      pdin <- par()$din[2]
+      sh <- (fsize * strwidth(paste(" ", cw$tip.label, 
+                                    sep = "")) + 0.3 * fsize * strwidth("W")) * (par()$din[1]/par()$din[2]) * 
+        (diff(par()$usr[3:4])/diff(par()$usr[1:2]))
+      cw$edge.length <- cw$edge.length/max(nodeHeights(cw)) * 
+        (split[1] * (ylim[2] - ylim[1]) - max(sh))
+      pw <- reorder(cw, "postorder")
+      x <- vector(length = n + cw$Nnode)
+      x[cw$edge[cw$edge[, 2] <= n, 2]] <- 0:(n - 1)/(n - 
+                                                       1) * (xlim[2] - xlim[1]) + xlim[1]
+      nn <- unique(pw$edge[, 1])
+      for (i in 1:length(nn)) {
+        xx <- x[pw$edge[which(pw$edge[, 1] == nn[i]), 
+                        2]]
+        x[nn[i]] <- mean(range(xx))
+      }
+      Y <- ylim[2] - nodeHeights(cw)
+      coords <- coords[cw$tip.label, 2:1]
+      for (i in 1:n) lines(c(x[i], coords[i, 1]), c(Y[which(cw$edge[, 
+                                                                    2] == i), 2] - if (from.tip) 0 else sh[i], coords[i, 
+                                                                                                                      2]), col = colors[cw$tip.label, ][i, 1], lty = lty, 
+                           lwd = lwd[2])
+      points(coords, pch = pch, cex = cex.points[2], bg = colors[cw$tip.label, 
+                                                                 2], col=colors[cw$tip.label, 
+                                                                                2])
+      for (i in 1:nrow(Y)) lines(rep(x[cw$edge[i, 2]], 
+                                     2), Y[i, ], lwd = lwd[1], lend = 2)
+      for (i in 1:cw$Nnode + n) lines(range(x[cw$edge[which(cw$edge[, 
+                                                                    1] == i), 2]]), Y[which(cw$edge[, 1] == i), 1], 
+                                      lwd = lwd[1], lend = 2)
+      for (i in 1:n) {
+        if (ftype) 
+          text(x[i], Y[which(cw$edge[, 2] == i), 2], 
+               paste(" ", sub("_", " ", cw$tip.label[i]), 
+                     sep = ""), pos = 4, offset = c(0, 1), srt = -90, 
+               cex = fsize, font = ftype)
+        if (pts) 
+          points(coords, pch = pch, cex = cex.points[2], bg = colors[cw$tip.label, 
+                                                                     2], col=colors[cw$tip.label, 
+                                                                                    2])
+      }
+      PP <- list(type = "phylogram", use.edge.length = TRUE, 
+                 node.pos = 1, show.tip.label = if (ftype) TRUE else FALSE, 
+                 show.node.label = FALSE, font = ftype, cex = fsize, 
+                 adj = 0, srt = 0, no.margin = FALSE, label.offset = fsize * 
+                   strwidth(" ")/(par()$usr[2] - par()$usr[1]) * 
+                   (par()$usr[4] - par()$usr[3]), x.lim = par()$usr[1:2], 
+                 y.lim = par()$usr[3:4], direction = direction, 
+                 tip.color = "black", Ntip = Ntip(cw), Nnode = cw$Nnode, 
+                 edge = cw$edge, xx = x, yy = sapply(1:(Ntip(cw) + 
+                                                          cw$Nnode), function(x, y, z) y[match(x, z)], 
+                                                     y = Y, z = cw$edge))
+    }
+    else {
+      dy <- abs(diff(ylim))
+      rect(xlim[1], ylim[1], xlim[1] + split[1] * (xlim[2] - 
+                                                     xlim[1]), ylim[2], col = "white", border = "white")
+      sh <- fsize * strwidth(paste(" ", cw$tip.label, sep = "")) + 
+        0.2 * fsize * strwidth("W")
+      cw$edge.length <- cw$edge.length/max(nodeHeights(cw)) * 
+        (split[1] * (xlim[2] - xlim[1]) - max(sh))
+      pw <- reorder(cw, "postorder")
+      y <- vector(length = n + cw$Nnode)
+      y[cw$edge[cw$edge[, 2] <= n, 2]] <- 0:(n - 1)/(n - 
+                                                       1) * (ylim[2] - ylim[1]) + ylim[1]
+      nn <- unique(pw$edge[, 1])
+      for (i in 1:length(nn)) {
+        yy <- y[pw$edge[which(pw$edge[, 1] == nn[i]), 
+                        2]]
+        y[nn[i]] <- mean(range(yy))
+      }
+      H <- nodeHeights(cw)
+      X <- xlim[1] + H
+      coords <- coords[cw$tip.label, 2:1]
+      for (i in 1:n) lines(c(X[which(cw$edge[, 2] == i), 
+                               2] + if (from.tip) 0 else sh[i], coords[i, 1]), 
+                           c(y[i], coords[i, 2]), col = colors[cw$tip.label, 
+                                                               ][i, 1], lty = lty, lwd = lwd[2])
+      points(coords, pch = pch, cex = cex.points[2], bg = colors[cw$tip.label, 
+                                                                 2], col=colors[cw$tip.label, 
+                                                                                2])
+      for (i in 1:nrow(X)) lines(X[i, ], rep(y[cw$edge[i, 
+                                                       2]], 2), lwd = lwd[1], lend = 2)
+      for (i in 1:cw$Nnode + n) lines(X[which(cw$edge[, 
+                                                      1] == i), 1], range(y[cw$edge[which(cw$edge[, 
+                                                                                                  1] == i), 2]]), lwd = lwd[1], lend = 2)
+      for (i in 1:n) {
+        if (ftype) 
+          text(X[which(cw$edge[, 2] == i), 2], y[i], 
+               paste(" ", sub("_", " ", cw$tip.label[i]), 
+                     sep = ""), pos = 4, offset = 0.1, cex = fsize, 
+               font = ftype)
+        if (pts) 
+          points(X[which(cw$edge[, 2] == i), 2], y[i], 
+                 pch = 21, bg = colors[cw$tip.label, ][i, 
+                                                       2], cex = cex.points[1])
+      }
+      PP <- list(type = "phylogram", use.edge.length = TRUE, 
+                 node.pos = 1, show.tip.label = if (ftype) TRUE else FALSE, 
+                 show.node.label = FALSE, font = ftype, cex = fsize, 
+                 adj = 0, srt = 0, no.margin = FALSE, label.offset = 0.1, 
+                 x.lim = par()$usr[1:2], y.lim = par()$usr[3:4], 
+                 direction = direction, tip.color = "black", Ntip = Ntip(cw), 
+                 Nnode = cw$Nnode, edge = cw$edge, xx = sapply(1:(Ntip(cw) + 
+                                                                    cw$Nnode), function(x, y, z) y[match(x, z)], 
+                                                               y = X, z = cw$edge), yy = y)
+    }
+    assign("last_plot.phylo", PP, envir = .PlotPhyloEnv)
+  }
+  else if (type == "direct") {
+    phylomorphospace(tree, coords[, 2:1], add = TRUE, label = "horizontal", 
+                     node.size = c(0, psize), lwd = lwd[2], control = list(col.node = setNames(rep(colors[2], 
+                                                                                                   max(tree$edge)), 1:max(tree$edge)), col.edge = setNames(rep(colors[1], 
+                                                                                                                                                               nrow(tree$edge)), tree$edge[, 2])), ftype = c("off", 
+                                                                                                                                                                                                             "reg", "b", "i", "bi")[ftype + 1], fsize = fsize)
+  }
+}
+
 
 ```
 
@@ -138,6 +361,9 @@ other_variants_file <- paste0(metadata_path, "PAKISTAN_ALL.other_variants.txt")
 tree_all_samps_file <- paste0(plots_path, "PAKISTAN_ALL.tree.png")
 beast_clusters_pdf_file <- paste0(plots_path, "PAKISTAN_ALL.beast_clusters.pdf")
 dr_trees_pdf_file <- paste0(plots_path, "PAKISTAN_ALL.dr_trees.pdf")
+# Map
+pakistan_sp_file <- paste0(metadata_path, "pakistan_sp.rds")
+pakistan_lat_long_file <- paste0(metadata_path, "pakistan_lat_long.csv")
 # Other
 methods_file <- paste0(methods_path, "pakistan_methods.tsv")
 
@@ -168,6 +394,9 @@ beast_log <- tracerer::parse_beast_log(beast_log_file)
 beast_clusters <- read.csv(beast_clusters_file, header = F, col.names = c("cluster", "id"))
 # Drug resistance
 other_variants <- read.delim(other_variants_file, header = T)
+# Map
+pakistan_sp <- readRDS(pakistan_sp_file)
+pakistan_lat_long <- read.csv(pakistan_lat_long_file, header = T)
 # Other
 methods_table <- read.table(file = methods_file, sep = '\t', header = TRUE)
 
@@ -254,8 +483,6 @@ dist_thresh <- dist_thresh+1 # Add 1 because 1/x later.
 
 ```
 
-
-
 ```{r wrangle-lineages, echo=F}
 
 
@@ -286,6 +513,7 @@ lin_conv_tab <- reshape2::dcast(lin_conv, sub_lineage + lsp_lineage + spoligotyp
 lin_conv_tab$pc <- (lin_conv_tab$N / sum(lin_conv_tab$N)) * 100
 names(lin_conv_tab) <- c("Lineage", "LSP lineage", "Spoligotype family", "Region of difference no.", "N", "%")
 lin_conv_tab <- lin_conv_tab[order(lin_conv_tab$N, decreasing = T),]
+row.names(lin_conv_tab) <- NULL
 
 
 ```
@@ -295,8 +523,9 @@ lin_conv_tab <- lin_conv_tab[order(lin_conv_tab$N, decreasing = T),]
 
 # YEARS ----
 
+metadata$year_round <- round(as.numeric(metadata$year, 1))
 
-year_tab <- reshape2::dcast(metadata, year ~ "N", value.var = id_col, fun.aggregate = length)
+year_tab <- reshape2::dcast(metadata, year_round ~ "N", value.var = id_col, fun.aggregate = length)
 year_tab$pc <- round((year_tab$N/sum(year_tab$N)) * 100, rnd)
 
 ```
@@ -306,11 +535,53 @@ year_tab$pc <- round((year_tab$N/sum(year_tab$N)) * 100, rnd)
 
 # LOCATION ----
 
+metadata$location <- ifelse(metadata$location == "", NA, metadata$location)
 
 location_tab <- reshape2::dcast(metadata, location ~ "N", value.var = id_col, fun.aggregate = length)
 location_tab$pc <- round((location_tab$N/sum(location_tab$N)) * 100, rnd)
 
+location_tab <- location_tab[order(location_tab$N, decreasing =T),]
+
 ```
+
+```{r wrangle-map, echo = F, message = F, warning = F}
+
+# Not sure what this does
+pakistan_sp@data$name <- pakistan_sp@data$NAME_1
+# Read in tree again (use ape because read.tree is presumably different to read.newick)
+map_tree <- ape::read.tree(tree_all_samps_newick_file)
+# Merge lat long data with metadata
+metadata <- merge(metadata, pakistan_lat_long, 
+                  by = "location", 
+                  all.x = T, 
+                  sort = F)
+# Sort
+locations <- metadata[match(map_tree$tip.label, metadata$wgs_id), ]
+# Make df of just lat long, sort (not sure the sort is needed), and add rownames
+lat_long <- data.frame(lat = locations$lat, long = locations$long)
+lat_long <- lat_long[match(map_tree$tip.label, locations$wgs_id), ]
+rownames(lat_long) <- map_tree$tip.label
+# Colours
+regions_uniq <- unique(locations$location)
+regions_cols <- rainbow(length(regions_uniq))
+map_cols <- matrix(rep(regions_cols[match(locations$location, regions_uniq)], 2),
+               nrow(locations), 2, byrow=F)
+rownames(map_cols) <- locations$wgs_id
+
+# Subset to complete cases
+lat_long <- lat_long[complete.cases(lat_long), ]
+tips <- map_tree$tip.label
+map_tree <- keep.tip(map_tree, tips[tips %in% row.names(lat_long)])
+names(regions_cols) <- regions_uniq
+regions_cols <- regions_cols[!(is.na(names(regions_cols)))]
+regions_uniq <- regions_uniq[complete.cases(regions_uniq)]
+
+# Do map
+obj <- phylo.to.map(map_tree, lat_long, plot = FALSE, database = pakistan_sp, fill=T)
+
+
+```
+
 
 ```{r wrangle-tree, echo=F}
 
@@ -349,7 +620,7 @@ dr_tab$drug_resistance <- row.names(dr_tab)
 names(dr_tab) <- c("N", "drug")
 dr_tab <- dr_tab[c("drug", "N")]
 row.names(dr_tab) <- NULL
-dr_tab$pc <- round((dr_tab$N/sum(dr_tab$N)) * 100, rnd)
+dr_tab$pc <- round((dr_tab$N/n_samps_total) * 100, rnd)
 
 # Genotypic DR - TBprofiler
 tbp_drug_tests <- grep("_tbp", names(metadata), value = T)
@@ -360,12 +631,12 @@ tbp_data$drug <- row.names(tbp_data)
 row.names(tbp_data) <- NULL
 tbp_data <- tbp_data[, c(2, 1)]
 names(tbp_data)[2] <- "N"
-tbp_data$pc <- round((tbp_data$N/sum(tbp_data$N)) * 100, rnd)
+tbp_data$pc <- round((tbp_data$N/n_samps_total) * 100, rnd)
 tbp_data$drug <- gsub("_tbp", "", tbp_data$drug)
 
 # Put DST and TBprofiler results together
 dr_tab <- merge(dr_tab, tbp_data, by = "drug", all = T, sort = F)
-names(dr_tab) <- c("Drug", "N DST resistant", "%", "N genotypic resistant", "%")
+names(dr_tab) <- c("Drug", "N DST resistant", "% DST resistant", "N genotypic resistant", "% genotypic resistant")
 
 
 # DR status
@@ -528,11 +799,12 @@ row.names(FP_results_table) <- NULL
 
 # "Table 1 – locations, lineages, drug resistance, dates of collection…"
 
+
 table_1 <- data.frame()
 table_1 <- rbind(table_1, 
                  setNames(lin_tab, names(table_1)), 
                  setNames(dr_status_tab, names(table_1)), 
-                 setNames(dr_tab[, c("Drug", "N genotypic resistant", "%")], names(table_1)), 
+                 setNames(dr_tab[, c("Drug", "N genotypic resistant", "% genotypic resistant")], names(table_1)), 
                  setNames(year_tab, names(table_1)), 
                  setNames(location_tab, names(table_1)))
 
@@ -546,7 +818,11 @@ table_1$Category <- c(rep("Lineage", nrow(lin_tab)),
 
 table_1 <- table_1[, c( "Category", "Characteristic", "N", "%")]
 
-table_1 <- table_1[complete.cases(table_1), ]
+# table_1 <- table_1[complete.cases(table_1), ]
+
+row.names(table_1) <- NULL
+
+
 
 ```
 
@@ -843,7 +1119,8 @@ width <- 0.1
 angle <- 45
 
 # Remove years from lineage data
-row.names(lin_data) <- unlist(lapply(strsplit(row.names(lin_data), "_"), function(x){ paste0(x[1:(length(x)-1)], collapse = "_") }))
+lin_data_no_year <- lin_data
+row.names(lin_data_no_year) <- unlist(lapply(strsplit(row.names(lin_data_no_year), "_"), function(x){ paste0(x[1:(length(x)-1)], collapse = "_") }))
 
 # Remove years from DR data 
 row.names(dr_status_data) <- unlist(lapply(strsplit(row.names(dr_status_data), "_"), function(x){ paste0(x[1:(length(x)-1)], collapse = "_") }))
@@ -855,7 +1132,7 @@ row.names(loc_data) <- unlist(lapply(strsplit(row.names(loc_data), "_"), functio
 ggtree_all_samps <- ggtree(tree_all_samps, size = line_sz, layout="circular")
 
 # Add lin data
-lin_hm <- gheatmap(ggtree_all_samps, lin_data,
+lin_hm <- gheatmap(ggtree_all_samps, lin_data_no_year,
          width = width,
          # offset = offset,
          color = NULL,
@@ -906,9 +1183,18 @@ dr_status_hm
 
 ***
 
+```{r map, echo=FALSE, out.width = "2000px", fig.cap=sprintf("Locations of samples; n = %s", length(obj$tree$tip.label))}
+
+plot(obj, lty = 1, fsize = 0.01, direction = "rightwards", colors = map_cols, pch=20)
+legend("bottomright", legend = regions_uniq, fill = regions_cols)
+
+```
+
+***
+
 ```{r dates, echo=FALSE, out.width = "2000px", fig.cap=sprintf("Histogram of sample collection year; n = %s", n_dated_samps)}
 
-year <- metadata$year[!is.na(metadata$year)]
+year <- round(as.numeric(metadata$year[!is.na(metadata$year)], 1))
 years <- sort(unique(year))
 breaks <- (min(year)-0.5):(max(year)+0.5)
 yr_hist <- hist(year, freq = T, xaxt="n", xlab= "year",
@@ -976,7 +1262,7 @@ abline(a = threshold, b = 0)
 
 # Subset
 # lin_data_qgraph <- lin_data[row.names(lin_data) %in% attributes(dist_dated_thresh)$Labels, "Lineage", drop = F]
-lin_data_qgraph <- lin_data[row.names(lin_data) %in% attributes(dist_thresh)$Labels, "Lineage", drop = F]
+lin_data_qgraph <- lin_data_no_year[row.names(lin_data_no_year) %in% attributes(dist_thresh)$Labels, "Lineage", drop = F]
 # Add sample names to df
 lin_data_qgraph$samp <- row.names(lin_data_qgraph)
 # Convert to DM for easy access to row and col names
@@ -1066,12 +1352,13 @@ qgraph::qgraph(1/dist_thresh,
                legend = TRUE, 
                color = loc_cols_qgraph)
 
-
+  
 ```
 
 ***
 
 ```{r beasttrees, echo=FALSE, out.width = "1500px", warning = F, message = F, cache=F, fig.show="hold", fig.cap="Timed phylogenetic trees of all dated samples (n = n_dated_samps), inferred from BEAST. A - Timed phylogenetic tree annotated with drug resistance statuses from phylogenetic tests (DST); B - The same tree annotated with drug resistance statuses from genotypic profiling (TBprofiler); C - Annotated with the discrepancies between the phenotypic and genotypic tests."}
+
 
 # Get last date from tree
 first_date <- mcc_tree_ape$root.edge
@@ -1092,7 +1379,7 @@ angle <- 45
 line_sz <- 0.2
 
 # Draw basic tree
-gg_mcmc_tree <- ggtree(mcc_tree, mrsd = last_date_chr, size = line_sz) %<+% metadata +
+gg_mcmc_tree <- ggtree(mcc_tree, mrsd = last_date_chr, size = line_sz) +
   theme_tree2() +
   # geom_tiplab(align=TRUE, linetype='dashed', linesize=.3, size = 2) +
   geom_range("length_0.95_HPD", color='red', size=2, alpha=.5) +
@@ -1186,6 +1473,7 @@ gheatmap(dr_status_hm, drug_discrepancy_data,
 
 ***
 
+<!--
 ```{r beasttreeszoom, echo=FALSE, out.width = "1500px", warning = F, message = F, cache=F, fig.show="hold", fig.cap=sprintf("The same trees and annotations as Figure \\@ref(fig:beasttrees), zoomed in to the last 50 years before the last sample date. Samples which do not form a cluster (the MRCA was before 50 years or there is only one sample) have been dropped. n = %s",  n_beast_cluster_samps)}
 
 # Zoom in to clusters
@@ -1397,6 +1685,7 @@ gheatmap(dr_status_hm, drug_discrepancy_data,
 
 
 ```
+-->
 
 ***
 
