--- a/r_scripts/data_wrangling.Rmd
+++ b/r_scripts/data_wrangling.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Characterisation of drug-resistant Mycobacterium tuberculosis mutations and transmission in Pakistan"
 output: 
-  bookdown::word_document2: 
+  bookdown::html_document2: 
     fig_caption: yes
     table_caption: yes
     number_sections: no
@@ -312,6 +312,7 @@ drugs <- c("rifampicin", "isoniazid", "ethambutol", "pyrazinamide", "streptomyci
 align <- c("l", "r", "r")
 col <- "cornflowerblue"
 threshold <- 10
+threshold_vect <- c(0, 1, seq(5, 50, 5))
 plot_text_sz <- 0.5
 main_cex <- 1.5
 
@@ -356,7 +357,8 @@ mcc_tree_file <- paste0(beast_results_path, "PAKISTAN_ALL.mcc.tree")
 beast_log_file <- paste0(beast_results_path, "PAKISTAN_ALL.dated.log")
 beast_clusters_file <- paste0(metadata_path, "PAKISTAN_ALL.clusters.csv")
 # Drug resistance
-other_variants_file <- paste0(metadata_path, "PAKISTAN_ALL.other_variants.txt")
+dr_variants_file <- paste0(metadata_path, "PAKISTAN_ALL.variants.dr.txt")
+other_variants_file <- paste0(metadata_path, "PAKISTAN_ALL.variants.other.txt")
 # Images
 tree_all_samps_file <- paste0(plots_path, "PAKISTAN_ALL.tree.png")
 beast_clusters_pdf_file <- paste0(plots_path, "PAKISTAN_ALL.beast_clusters.pdf")
@@ -393,6 +395,7 @@ mcc_tree <- treeio::read.beast(mcc_tree_file)
 beast_log <- tracerer::parse_beast_log(beast_log_file)
 beast_clusters <- read.csv(beast_clusters_file, header = F, col.names = c("cluster", "id"))
 # Drug resistance
+dr_variants <- read.delim(dr_variants_file, header = T)
 other_variants <- read.delim(other_variants_file, header = T)
 # Map
 pakistan_sp <- readRDS(pakistan_sp_file)
@@ -480,6 +483,19 @@ dist_thresh <- as.dist(dist[sort(names(clusters)), sort(names(clusters))])
 # dist_dated_thresh <- dist_dated_thresh+1 # Add 1 because 1/x later.
 dist_thresh <- dist_thresh+1 # Add 1 because 1/x later.
 
+```
+
+```{r dist-sensitivity, echo=F}
+
+clusters_list <- list()
+for(i in seq(threshold_vect)){
+  # Cut tree at threshold to find samples within threshold
+  clusters_list[[i]] <- sort(cutree(clust, h = threshold_vect[i]))  
+  clusters_list[[i]] <- clusters_list[[i]][clusters_list[[i]] %in% names(which(table(clusters_list[[i]]) > 1)) ]
+}
+
+n_clusts_vect <- unlist(lapply(clusters_list, function(x) length(unique(x))))
+n_samps_per_cluster_vect <- unlist(lapply(clusters_list, function(x) length(x)))
 
 ```
 
@@ -582,7 +598,6 @@ obj <- phylo.to.map(map_tree, lat_long, plot = FALSE, database = pakistan_sp, fi
 
 ```
 
-
 ```{r wrangle-tree, echo=F}
 
 
@@ -676,32 +691,10 @@ FN <- "pheno_res; geno_sens"
 FP <- "pheno_sens; geno_res"
 discrepancy_data <- metadata[, grep("_test", names(metadata), value = T)]
 
-
-
-# REMOVE na.rm = T !!!!!!!!!
-# REMOVE na.rm = T !!!!!!!!!
-# REMOVE na.rm = T !!!!!!!!!
-# REMOVE na.rm = T !!!!!!!!!
-
-
-FN_res <- apply(discrepancy_data, 2, function(x){sum(x == FN, na.rm = T)})
-FP_res <- apply(discrepancy_data, 2, function(x){sum(x == FP, na.rm = T)})
-
-
-# REMOVE na.rm = T !!!!!!!!!
-# REMOVE na.rm = T !!!!!!!!!
-# REMOVE na.rm = T !!!!!!!!!
-# REMOVE na.rm = T !!!!!!!!!
-
-
-
-# dd <- metadata[metadata$wgs_id == "ERR3335799", grep("_test", names(metadata), value = T)]
-# apply(dd, 2, function(x){sum(x == FN)})
-
-
+FN_res <- apply(discrepancy_data, 2, function(x){sum(x == FN)})
+FP_res <- apply(discrepancy_data, 2, function(x){sum(x == FP)})
 
 discrepancy_data$wgs_id <- metadata$wgs_id # Add ids in for the other variants stuff
-# REMOVE na.rm = T !!!!!!!!!
 n_FN_samps <- sum(FN_res)
 n_FP_samps <- sum(FP_res)
 FN_drugs_split <- names(FN_res[FN_res > 0])
@@ -752,6 +745,10 @@ for(i in seq(FN_drugs_split)){
 
 # other_variants[other_variants[,"id_year"] == "ERR2510452_NA", ]
 
+
+# TABLE - SUMMARY OF NUMERS - HOW MANY SAMPS 
+FN_results_table_pivot <- reshape2::dcast(FN_results,  drug ~ gene, value.var = "wgs_id", fun.aggregate = length)
+
 # Neaten table 
 FN_results_table <- unique(FN_results[, !(names(FN_results) %in% c("locus_tag_drugs", "wgs_id", "id_year"))])
 FN_results_table <- FN_results_table[order(FN_results_table$drug, FN_results_table$gene, FN_results_table$genome_pos), ]
@@ -790,6 +787,17 @@ FP_results_table <- FP_results_table[order(FP_results_table$drug, FP_results_tab
 row.names(FP_results_table) <- NULL
 
 ```
+
+
+```{r wrangle-discrepancies-dr-variants, echo=F}
+
+dr_variants_pivot <- reshape2::dcast(dr_variants,  locus_tag_drugs ~ gene, value.var = "wgs_id", fun.aggregate = length)
+dr_variants_results_table <- unique(dr_variants[, !(names(dr_variants) %in% c("wgs_id", "id_year"))])
+dr_variants_results_table <- dr_variants_results_table[order(dr_variants_results_table$gene), ]
+
+
+```
+
 
 ```{r wrangle-loc-lin-dr-dates, echo = F}
 
@@ -1162,21 +1170,21 @@ dr_status_hm <- gheatmap(lin_hm, dr_status_data,
   labs(fill = "DR status")+
   legend_spec
 
-dr_status_hm
+# dr_status_hm
 
-# dr_status_hm <- dr_status_hm + ggnewscale::new_scale_fill()
-# 
-# gheatmap(dr_status_hm, loc_data,
-#                    width = width,
-#                    offset = width * (0.025*2),
-#                    color = NULL,
-#                    colnames_position = "top",
-#                    colnames_angle = angle, colnames_offset_y = 1,
-#                    hjust = 0,
-#                    font.size = 2) +
-#   scale_fill_manual(values = loc_cols, breaks = names(loc_cols), na.value="white")+
-#   labs(fill = "Location")+
-#   legend_spec
+dr_status_hm <- dr_status_hm + ggnewscale::new_scale_fill()
+
+gheatmap(dr_status_hm, loc_data,
+                   width = width,
+                   offset = width * (0.025*2),
+                   color = NULL,
+                   colnames_position = "top",
+                   colnames_angle = angle, colnames_offset_y = 1,
+                   hjust = 0,
+                   font.size = 2) +
+  scale_fill_manual(values = loc_cols, breaks = names(loc_cols), na.value="white")+
+  labs(fill = "Location")+
+  legend_spec
 
 
 ```
@@ -1186,7 +1194,7 @@ dr_status_hm
 ```{r map, echo=FALSE, out.width = "2000px", fig.cap=sprintf("Locations of samples; n = %s", length(obj$tree$tip.label))}
 
 plot(obj, lty = 1, fsize = 0.01, direction = "rightwards", colors = map_cols, pch=20)
-legend("bottomright", legend = regions_uniq, fill = regions_cols)
+legend("bottomright", legend = regions_uniq, fill = regions_cols, cex = 0.75)
 
 ```
 
@@ -1353,6 +1361,17 @@ qgraph::qgraph(1/dist_thresh,
                color = loc_cols_qgraph)
 
   
+```
+
+***
+
+```{r n-clusters-plot, echo = F, out.width = "2000px", fig.cap = "Number of clusters (top) and number of samples in each cluster (bottom), per SNP distance threshold (1 - 50 SNPs)", fig.show="hold"}
+
+plot(threshold_vect, n_clusts_vect, type = 'l', xaxt = "n", xlab = "SNP distance threshold", ylab = "n clusters")
+axis(1, at = threshold_vect, las = 2)
+plot(threshold_vect, n_samps_per_cluster_vect, type = 'l', xaxt = "n", xlab = "SNP distance threshold", ylab = "n clustering samples")
+axis(1, at = threshold_vect, las = 2)
+
 ```
 
 ***
